--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "basic_simple_elgamal": "^2.4.14",
+    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
     "elgamal": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +22,7 @@
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/elgamal": "^0.3.3",
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.37",
